--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -149,7 +149,7 @@ jobs:
         params:
           manifest: repo/manifest-staging.yml
           path: output/demo.jar
-          current_app_name: concourse-ci-demo
+          current_app_name: concourse-ci-demo-stg
 
   - name: pass-stg
     plan:
