--- a/pom.xml
+++ b/pom.xml
@@ -1,37 +1,47 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>devops-comment-api</artifactId>
-	<packaging>jar</packaging>
-	<name>devops-comment-api</name>
-	<description>comment API service</description>
-
 	<parent>
-		<groupId>com.megazone.devops</groupId>
-		<artifactId>framework-parent</artifactId>
-		<version>1.1.0-SNAPSHOT</version>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.1.2.RELEASE</version>
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
+	<groupId>com.megazone</groupId>
+	<artifactId>build-test</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>build-test</name>
+	<description>Demo project for Spring Boot</description>
+
+	<properties>
+		<java.version>1.8</java.version>
+	</properties>
 
 	<dependencies>
-		<!-- [[ START ]] Framework 관련 -->
-		<dependency>
-			<groupId>com.megazone.devops</groupId>
-			<artifactId>framework-commons</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.megazone.devops</groupId>
-			<artifactId>framework-base-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-		<!-- [[ END ]] Framework 관련 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -39,10 +49,8 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<mainClass>com.megazone.devops.common.web.ApplicationInitializer</mainClass>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+
 </project>
