--- a/manifest-dev.yml
+++ b/manifest-dev.yml
@@ -1,6 +1,6 @@
 ---
 applications:
   - name: concourse-ci-demo-dev
-    path: target/build-test-0.0.1-SNAPSHOT.jar
+    path: target/demo.jar
     buildpack: java_buildpack
     memory: 1024m
